; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_fled_mode_cycle.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_fled_mode_cycle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fled_mode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fled_mode_cycle() #0 {
  %1 = load i32, i32* @fled_mode, align 4
  switch i32 %1, label %5 [
    i32 129, label %2
    i32 128, label %3
    i32 130, label %4
  ]

2:                                                ; preds = %0
  store i32 128, i32* @fled_mode, align 4
  br label %5

3:                                                ; preds = %0
  store i32 130, i32* @fled_mode, align 4
  br label %5

4:                                                ; preds = %0
  store i32 129, i32* @fled_mode, align 4
  br label %5

5:                                                ; preds = %0, %4, %3, %2
  %6 = call i32 (...) @eeprom_update_conf()
  %7 = call i32 (...) @rgblight_set()
  ret void
}

declare dso_local i32 @eeprom_update_conf(...) #1

declare dso_local i32 @rgblight_set(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
